src/test/ui/track-diagnostics/track4.stderr
error: missing `struct` for struct definition
  --> $DIR/track4.rs:$LINE::$COL
   |
LL | pub onion {
   |    ^
-Ztrack-diagnostics: created at compiler/rustc_parse/src/parser/diagnostics.rs:$LINE::$COL
   |
help: add `struct` here to parse `onion` as a public struct
   |
LL | pub struct onion {
   |     ++++++

error: aborting due to previous error

